started to edit makefile. About to get rid of PRINTFs in data.c that were used for debugging.

--- a/course1/Makefile
+++ b/course1/Makefile
@@ -25,7 +25,7 @@ include sources.mk
 
 # Platform Overrides
 PLATFORM = MSP432
-TARGET = c1m2
+TARGET = c1m4
 OBJS = $(SOURCES:.c=.o)
 ASMS = $(SOURCES:.c=.asm)
 IFILES = $(SOURCES:.c=.i)
@@ -37,7 +37,7 @@ ifeq ($(PLATFORM),HOST)
 	ARCH = 
 	SPECS = 
 else
-	LINKER_FILE = ../msp432p401r.lds
+	LINKER_FILE = msp432p401r.lds
 	CPU = cortex-m4
 	ARCH = thumb
 	SPECS = nosys.specs
